<?xml version="1.0"?>
<package>
  <name>mav_exp</name>
  <version>0.0.1</version>
  <description>mav_exp</description>
  <maintainer email="chutsu@gmail.com">Chris Choi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
