CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(mav_exp)
FIND_PACKAGE(catkin REQUIRED)
CATKIN_PACKAGE()
CATKIN_INSTALL_PYTHON(
  PROGRAMS mav_node.py offb_node.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
install(
  DIRECTORY launch/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
)
INSTALL(DIRECTORY launch DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
